build/log/idf_py_stdout_output_49432
[1/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/scd30_driver.c.obj
[2/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\chris\SCD30_ZIGBEE\build\bootloader\esp-idf\esptool_py && C:\Users\chris\.espressif\python_env\idf5.3_py3.11_env\Scripts\python.exe C:/Users/chris/esp/v5.3.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/chris/SCD30_ZIGBEE/build/bootloader/bootloader.bin"
Bootloader binary size 0x54e0 bytes. 0x2b20 bytes (34%) free.
[3/8] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/zigbee_handler.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/zigbee_handler.c.obj 
ccache C:\Users\chris\.espressif\tools\riscv32-esp-elf\esp-13.2.0_20240530\riscv32-esp-elf\bin\riscv32-esp-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.3.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/chris/SCD30_ZIGBEE/build/config -IC:/Users/chris/SCD30_ZIGBEE/main -IC:/Users/chris/esp/v5.3.1/esp-idf/components/newlib/platform_include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/freertos/config/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/freertos/config/include/freertos -IC:/Users/chris/esp/v5.3.1/esp-idf/components/freertos/config/riscv/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -IC:/Users/chris/esp/v5.3.1/esp-idf/components/freertos/esp_additions/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_hw_support/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_hw_support/include/soc -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_hw_support/include/soc/esp32c6 -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_hw_support/dma/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_hw_support/ldo/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_hw_support/port/esp32c6/. -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_hw_support/port/esp32c6/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_hw_support/port/esp32c6/private_include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/heap/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/log/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/soc/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/soc/esp32c6 -IC:/Users/chris/esp/v5.3.1/esp-idf/components/soc/esp32c6/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/hal/platform_port/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/hal/esp32c6/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/hal/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_rom/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_rom/include/esp32c6 -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_rom/esp32c6 -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_common/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_system/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_system/port/soc -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_system/port/include/riscv -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_system/port/include/private -IC:/Users/chris/esp/v5.3.1/esp-idf/components/riscv/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/lwip/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/lwip/include/apps -IC:/Users/chris/esp/v5.3.1/esp-idf/components/lwip/include/apps/sntp -IC:/Users/chris/esp/v5.3.1/esp-idf/components/lwip/lwip/src/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/lwip/port/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/lwip/port/freertos/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/chris/esp/v5.3.1/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/chris/esp/v5.3.1/esp-idf/components/driver/deprecated -IC:/Users/chris/esp/v5.3.1/esp-idf/components/driver/i2c/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/driver/touch_sensor/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/driver/twai/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_pm/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_ringbuf/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_driver_gpio/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_driver_pcnt/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_driver_gptimer/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_driver_spi/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_driver_mcpwm/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_driver_ana_cmpr/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_driver_i2s/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_driver_sdmmc/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/sdmmc/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_driver_sdspi/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_driver_sdio/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_driver_dac/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_driver_rmt/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_driver_tsens/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_driver_sdm/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_driver_i2c/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_driver_uart/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/vfs/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_driver_ledc/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_driver_parlio/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_driver_usb_serial_jtag/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/nvs_flash/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/spi_flash/include -IC:/Users/chris/esp/v5.3.1/esp-idf/components/esp_partition/include -IC:/Users/chris/SCD30_ZIGBEE/managed_components/espressif__esp-zboss-lib/include -IC:/Users/chris/SCD30_ZIGBEE/managed_components/espressif__esp-zigbee-lib/include -march=rv32imac_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/chris/SCD30_ZIGBEE=. -fmacro-prefix-map=C:/Users/chris/esp/v5.3.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -Wno-strict-prototypes -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/zigbee_handler.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\zigbee_handler.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/zigbee_handler.c.obj -c C:/Users/chris/SCD30_ZIGBEE/main/zigbee_handler.c
C:/Users/chris/SCD30_ZIGBEE/main/zigbee_handler.c: In function 'SCD30_task':
C:/Users/chris/SCD30_ZIGBEE/main/zigbee_handler.c:590:17: error: implicit declaration of function 'memset' [-Werror=implicit-function-declaration]
  590 |                 memset(temp_history, 0, sizeof(temp_history));
      |                 ^~~~~~
C:/Users/chris/SCD30_ZIGBEE/main/zigbee_handler.c:18:1: note: include '<string.h>' or provide a declaration of 'memset'
   17 | #include "scd30_driver.h"
  +++ |+#include <string.h>
   18 | 
C:/Users/chris/SCD30_ZIGBEE/main/zigbee_handler.c:590:17: warning: incompatible implicit declaration of built-in function 'memset' [-Wbuiltin-declaration-mismatch]
  590 |                 memset(temp_history, 0, sizeof(temp_history));
      |                 ^~~~~~
C:/Users/chris/SCD30_ZIGBEE/main/zigbee_handler.c:590:17: note: include '<string.h>' or provide a declaration of 'memset'
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
